added start of outline to lesson book 1

--- a/_notebooks/Foundation/lessonBook1.ipynb
+++ b/_notebooks/Foundation/lessonBook1.ipynb
@@ -6,6 +6,21 @@
    "source": [
     "the skibidi toiled skibidies all toilet long"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Outline for the lesson:\n",
+    "\n",
+    "1: What is a variable?\n",
+    "\n",
+    "2: common uses for variables\n",
+    "\n",
+    "3:Variable code example\n",
+    "\n",
+    "4:Popcorn hack?"
+   ]
   }
  ],
  "metadata": {
