--- a/_notebooks/Foundation/lessonBook1.ipynb
+++ b/_notebooks/Foundation/lessonBook1.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "2: common uses for variables\n",
     "\n",
-    "3:Variable code example\n",
+    "3: Variable code example\n",
     "\n",
-    "4:Popcorn hack?"
+    "4: What is Popcorn hack?"
    ]
   },
   {
@@ -26,12 +26,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- a variable is a container used to store information set by the user\n",
-    "    - this allows the data to be easily accessed and manipulated throughout the code\n",
-    "- they also provide a way to label data with a descriptive name\n",
-    "    - this allows for easier navigation and understanding through code\n",
+    "Variables are labeled containers that store values, such as numbers or strings. They are defined by the programmer and can be accessed and, in most cases, changed throughout the code of the program. Some examples of variable usage are:\n",
+    "<ul>\n",
+    "    <li>\n",
+    "    Keeping scores in video games (Ex: score = 10)\n",
+    "    </li>\n",
+    "    <li>\n",
+    "    Storing user-inputted text (Ex: message = \"Hello!\")\n",
+    "    </li>\n",
+    "    <li>\n",
+    "    Keeping track of positions (Ex: playerX = 0)\n",
+    "    </li>\n",
+    "</ul>\n",
+    "Since many values need to change during a program runs, variables are extremely useful in all programming applications.\n",
     "\n",
-    "> Simplifying the yap: variables are like boxes which can hold different items. You can change what it holds, but it can only hold one thing at a time.\n"
+    "> Simplifying the yap: Variables are labeled containers that store values in code. They can be accessed and manipulated throughout the program and are extremely important in programming.\n"
    ]
   },
   {
@@ -69,8 +78,9 @@
     }
    ],
    "source": [
-    "let Number1 = 25\n",
-    "console.log(Number1)"
+    "let Score = 25; //Sets a variable called \"Score\" to 25\n",
+    "console.log(Score); //Prints the \"Score\" variable's value in the browser's console (will output \"25\")\n",
+    "Score += 10; //Increases Score by 10"
    ]
   }
  ],
