stuff for popcorn hax (early)

--- a/_notebooks/Foundation/popcornHax.ipynb
+++ b/_notebooks/Foundation/popcornHax.ipynb
@@ -4,13 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Beginning of the Popcorn Hax"
+    "<h1>Popcorn Hax</h1>\n",
+    "\n",
+    "Exercise 1:\n",
+    "Define a variable \"charHealth\" as an integer value of 100. Then, run a command to print the value and type of charHealth.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//On this line, define charHealth.\n",
+    "\n",
+    "//Run the command to print charHealth's value here.\n",
+    "\n",
+    "//Run the command to check the type of variable here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 2:\n",
+    "Define two variables: \"charHealth\" and \"damage\". Then, combine the two to update charHealth. Make sure they are the same type of variable - otherwise, you will not be able to combine them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//Define variables up here. Make sure they are both either float or integer values.\n",
+    "let charHealth = 100.0\n",
+    "const damage = 13.5\n",
+    "//Update charHealth after the player has taken damage. The character should lose health relative to damage taken.\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "test2",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
