--- a/_notebooks/Foundation/homework.ipynb
+++ b/_notebooks/Foundation/homework.ipynb
@@ -4,8 +4,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Beginning of the Homework"
+    "## Lesson one homework"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You are in charge of maintaining an illegal arcade. You bought some crappy arcade machines and they sadly came blank. Define a variable to have a base score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Would you use Let or Const"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a variable playerLimit that cannot be re-assigned and give it a value of 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a string variable to store the players name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
