--- a/_notebooks/Foundation/popcornHax.ipynb
+++ b/_notebooks/Foundation/popcornHax.ipynb
@@ -6,19 +6,34 @@
    "source": [
     "<h1>Popcorn Hax</h1>\n",
     "\n",
+    "To acces printed results using console.log, follow this simple set of steps.\n",
+    "1: Acces the \"Help\" button near the top of your screen (next to to \"Terminal\" and \"Window). It looks something like this on macOS:\n",
+    "<img width=\"844\" alt=\"image\" src=\"https://github.com/user-attachments/assets/18465a9b-e7e3-4f9d-8653-3ede47e2dfc6\" />\n",
+    "<br>\n",
+    "After clicking help, the drop-down menu should have a \"Toggle Developer Tools\" option. Click it, and navigate to the console menu.\n",
+    "Then, look for a little O with a line through it. Click this to clear the console.\n",
     "Exercise 1:\n",
     "Define a variable \"charHealth\" as an integer value of 100. Then, run a command to print the value and type of charHealth.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 3) (3489787773.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    //Run the command to print charHealth's value here.\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 3)\n"
+     ]
+    }
+   ],
    "source": [
     "//On this line, define charHealth.\n",
     "\n",
@@ -37,18 +52,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "//Define variables up here. Make sure they are both either float or integer values.\nlet charHealth = 100.0;\nconst damage = 13.5;\n//Update charHealth after the player has taken damage. The character should lose health relative to damage taken.\ncharHealth -= damage;\nconsole.log(charHealth);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "%%js\n",
     "//Define variables up here. Make sure they are both either float or integer values.\n",
-    "let charHealth = 100.0\n",
-    "const damage = 13.5\n",
-    "//Update charHealth after the player has taken damage. The character should lose health relative to damage taken.\n"
+    "let charHealth = 100.0;\n",
+    "const damage = 13.5;\n",
+    "//Update charHealth after the player has taken damage. The character should lose health relative to damage taken.\n",
+    "charHealth -= damage;\n",
+    "console.log(charHealth);"
    ]
   }
  ],
@@ -59,7 +88,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.1"
   }
  },
