--- a/_notebooks/Foundation/lessonBook1.ipynb
+++ b/_notebooks/Foundation/lessonBook1.ipynb
@@ -40,6 +40,7 @@
     "</ul>\n",
     "Since many values need to change during a program runs, variables are extremely useful in all programming applications.\n",
     "\n",
+    "\n",
     "> Simplifying the yap: Variables are labeled containers that store values in code. They can be accessed and manipulated throughout the program and are extremely important in programming.\n"
    ]
   },
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -67,17 +68,18 @@
    },
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.13.0' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
+     "data": {
+      "application/javascript": "let Score = 25; //Sets a variable called \"Score\" to 25\nconsole.log(Score); //Prints the \"Score\" variable's value in the browser's console (will output \"25\")\nScore += 10; //Increases Score by 10\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "%%js\n",
     "let Score = 25; //Sets a variable called \"Score\" to 25\n",
     "console.log(Score); //Prints the \"Score\" variable's value in the browser's console (will output \"25\")\n",
     "Score += 10; //Increases Score by 10"
@@ -91,8 +93,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
