--- a/_notebooks/Foundation/lessonBook1.ipynb
+++ b/_notebooks/Foundation/lessonBook1.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is a Variable?"
+    "# What is a Variable?"
    ]
   },
   {
@@ -48,14 +48,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Types of variables"
+    "# Types of variables"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numbers: integers and floating point numbers"
+    "<h2>Numbers:</h2>\n",
+    "In many programming languages, numbers are broken down into two types: integers and floating-points. Integers are low-memory and refer to any whole number (Ex. 1, 14, or -57). Floating-point numbers take up more memory, but can store any number (Ex. 1.567, 8, 3.14159). In Javascript, all numbers are reffered to simple as \"Number\", meaning there is no difference between floats and integers.\n",
+    "\n",
+    "<h3>Example</h3>"
    ]
   },
   {
@@ -83,6 +86,13 @@
     "let Score = 25; //Sets a variable called \"Score\" to 25\n",
     "console.log(Score); //Prints the \"Score\" variable's value in the browser's console (will output \"25\")\n",
     "Score += 10; //Increases Score by 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strings: text that is marked with quotation mark"
    ]
   }
  ],
