--- a/_notebooks/Foundation/homework.ipynb
+++ b/_notebooks/Foundation/homework.ipynb
@@ -11,19 +11,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You are in charge of maintaining an illegal arcade. You bought some crappy arcade machines and they sadly came blank. Define a variable to have a base score."
+    "You are in charge of maintaining an illegal arcade. You bought shoddy crappy arcade machines off of Temu and they sadly came with missing information. You need to help put back the missing information to allow your shady customers to lose all their money at your store."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a float variable to make the base score 0.00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
-     "languageId": "plaintext"
+     "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "// Would you use Let or Const\n\nconsole.log(\"test\");\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "%%js\n",
     "// Would you use Let or Const"
    ]
   },
@@ -39,17 +58,19 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "plaintext"
+     "languageId": "javascript"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%js"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a string variable to store the players name."
+    "Create a string variable to store the players name. "
    ]
   },
   {
@@ -57,16 +78,52 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "plaintext"
+     "languageId": "javascript"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%js"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make a boolean to set gameFunction to false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
