--- a/_notebooks/Foundation/popcornHax.ipynb
+++ b/_notebooks/Foundation/popcornHax.ipynb
@@ -7,7 +7,7 @@
     "<h1>Popcorn Hax</h1>\n",
     "\n",
     "To acces printed results using console.log, follow this simple set of steps.\n",
-    "1: Acces the \"Help\" button near the top of your screen (next to to \"Terminal\" and \"Window). It looks something like this on macOS:\n",
+    "1: Acces the \"Help\" button near the top of your screen (next to to \"Terminal\" and \"Window). It looks something like this on macOS:<br>\n",
     "<img width=\"844\" alt=\"image\" src=\"https://github.com/user-attachments/assets/18465a9b-e7e3-4f9d-8653-3ede47e2dfc6\" />\n",
     "<br>\n",
     "After clicking help, the drop-down menu should have a \"Toggle Developer Tools\" option. Click it, and navigate to the console menu.\n",
@@ -75,7 +75,7 @@
    ],
    "source": [
     "%%js\n",
-    "//Define variables up here. Make sure they are both either float or integer values.\n",
+    "//Define variables up here. Make sure they are both number values.\n",
     "let charHealth = 100.0;\n",
     "const damage = 13.5;\n",
     "//Update charHealth after the player has taken damage. The character should lose health relative to damage taken.\n",
