buttons should properly link to notebooks now

--- a/_notebooks/Foundation/2025-01-09-lessonBook1.ipynb
+++ b/_notebooks/Foundation/2025-01-09-lessonBook1.ipynb
@@ -4,15 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Outline for the lesson:\n",
     "\n",
-    "1: What is a variable?\n",
-    "\n",
-    "2: common uses for variables\n",
-    "\n",
-    "3: Variable code example\n",
-    "\n",
-    "4: What is Popcorn hack?"
+    "<style>\n",
+    "    p {\n",
+    "        text-color: white;\n",
+    "    }\n",
+    "</style>"
    ]
   },
   {
