--- a/_notebooks/variables/2025-01-09-homework.ipynb
+++ b/_notebooks/variables/2025-01-09-homework.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You are in charge of maintaining an illegal arcade. You bought shoddy crappy arcade machines off of Temu and they sadly came with missing information. You need to help put back the missing information to allow your shady customers to lose all their money at your store."
+    "You are in charge of maintaining an illegal arcade. You bought shoddy arcade machines off of Temu and they sadly came with missing information. You need to help put back the missing information to allow your shady customers to lose all their money at your store."
    ]
   },
   {
