--- a/_notebooks/variables/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook2.ipynb
@@ -6,6 +6,21 @@
    "source": [
     "Beginning of the second lesson book"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Advanced Application of Variables \n",
+    "(Normal people talk: Common Uses)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple game logic"
+   ]
   }
  ],
  "metadata": {
