--- a/_notebooks/variables/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook2.ipynb
@@ -1,10 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Beginning of the second lesson book"
+    "---\n",
+    "layout: post\n",
+    "title: Learning Habits\n",
+    "description: Establishing pair programming habits in the classroom.  This will extend to other forms of collaboration, such as group work and team projects. \n",
+    "type: collab\n",
+    "comments: true\n",
+    "---"
    ]
   },
   {
