--- a/_notebooks/variables/2025-01-09-lessonBook1.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook1.ipynb
@@ -13,6 +13,34 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "---\n",
+    "layout: post\n",
+    "title: Learning Habits\n",
+    "description: Establishing pair programming habits in the classroom.  This will extend to other forms of collaboration, such as group work and team projects. \n",
+    "type: collab\n",
+    "comments: true\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "test2",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
