--- a/_notebooks/variables/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "layout: post\n",
+    "title: Learning Habits\n",
+    "description: Establishing pair programming habits in the classroom.  This will extend to other forms of collaboration, such as group work and team projects. \n",
+    "type: collab\n",
+    "comments: true\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
