smal updates to hax and answer key, frontmatter template added for all files

--- a/_notebooks/variables/2025-01-09-homework.ipynb
+++ b/_notebooks/variables/2025-01-09-homework.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Learning Habits\n",
-    "description: Establishing pair programming habits in the classroom.  This will extend to other forms of collaboration, such as group work and team projects. \n",
+    "title: Homework\n",
+    "description: Exercises to help you apply your knowledge of variables.\n",
     "type: collab\n",
     "comments: true\n",
     "---"
