--- a/_notebooks/variables/2025-01-09-lessonBook1.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook1.ipynb
@@ -22,8 +22,8 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Learning Habits\n",
-    "description: Establishing pair programming habits in the classroom.  This will extend to other forms of collaboration, such as group work and team projects. \n",
+    "title: Lesson 1\n",
+    "description: What are variables? What types of variables are there? what do they do? This lesson will help you find out.\n",
     "type: collab\n",
     "comments: true\n",
     "---"
