--- a/_notebooks/variables/2025-01-09-popcornHax completed.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax completed.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Learning Habits\n",
-    "description: Establishing pair programming habits in the classroom.  This will extend to other forms of collaboration, such as group work and team projects. \n",
+    "title: Popcorn Hax Answer Key\n",
+    "description: Examples of correct answers for the Popcorn Hax Page.\n",
     "type: collab\n",
     "comments: true\n",
     "---"
@@ -17,21 +21,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Popcorn Hax</h1>\n",
+    "<h1>Popcorn Hax Answer Key</h1>\n",
     "\n",
-    "To acces printed results using console.log, follow this simple set of steps.\n",
-    "1: Acces the \"Help\" button near the top of your screen (next to to \"Terminal\" and \"Window). It looks something like this on macOS:\n",
-    "<img width=\"844\" alt=\"image\" src=\"https://github.com/user-attachments/assets/18465a9b-e7e3-4f9d-8653-3ede47e2dfc6\" />\n",
-    "<br>\n",
-    "After clicking help, the drop-down menu should have a \"Toggle Developer Tools\" option. Click it, and navigate to the console menu.\n",
-    "Then, look for a little O with a line through it. Click this to clear the console.\n",
-    "Exercise 1:\n",
-    "Define a variable \"charHealth\" as an integer value of 100. Then, run a command to print the value and type of charHealth.\n"
+    "This file contains example answers for all the Hax. There are many right answers to every question, so don't panic if your answer does not exactly match ours. If it gets to the same endpoint, it's all good."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -39,20 +36,24 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 3) (3489787773.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    //Run the command to print charHealth's value here.\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 3)\n"
-     ]
+     "data": {
+      "application/javascript": "//On this line, define charHealth.\nlet charHealth = 100.0;\n//Run the command to print charHealth's value here.\nconsole.log(charHealth);\n//Run the command to check the type of variable here.\nconsole.log(typeof charHealth);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "%%js\n",
     "//On this line, define charHealth.\n",
-    "\n",
+    "let charHealth = 100.0;\n",
     "//Run the command to print charHealth's value here.\n",
-    "\n",
-    "//Run the command to check the type of variable here."
+    "console.log(charHealth);\n",
+    "//Run the command to check the type of variable here.\n",
+    "console.log(typeof charHealth);"
    ]
   },
   {
@@ -87,10 +88,49 @@
     "%%js\n",
     "//Define variables up here. Make sure they are both either float or integer values.\n",
     "let charHealth = 100.0;\n",
+    "//Note: const used for damage here for no particular reason other than some basic IRl logic: health is a dynamically changing variable, but this source of damage is just there as a constant, meant to change health by a certain amount.\n",
     "const damage = 13.5;\n",
-    "//Update charHealth after the player has taken damage. The character should lose health relative to damage taken.\n",
+    "//Update charHealth after the player has taken damage. The character should lose health relative to damage taken. Print your results.\n",
     "charHealth -= damage;\n",
     "console.log(charHealth);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Exercise 3:</h2><br>\n",
+    "Create two parts of a message, and store each part as a separate variable. Combine these variables into a new one, finalMessage, and print its results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "//Define variables and combine them here\nlet msg1 = \"Hello, world!\";\nlet msg2 = \", world!\";\nlet finalMessage = msg1 - msg2;\n//Print results here.\nconsole.log(finalMessage);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "//Define variables and combine them here\n",
+    "let messagePart1 = \"Hello, \";\n",
+    "let messagePart2 = \"World!\"\n",
+    "let finalMessage = messagePart1 + messagePart2;\n",
+    "//Print results here.\n",
+    "console.log(finalMessage);"
    ]
   }
  ],
