--- a/_notebooks/variables/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Learning Habits\n",
-    "description: Establishing pair programming habits in the classroom.  This will extend to other forms of collaboration, such as group work and team projects. \n",
-    "type: collab\n",
-    "comments: true\n",
+    "title: Popcorn Hax\n",
+    "description: Exercises to do mid-lesson, when instructed. Designed to be fairly easy and help you apply a basic understanding of variables you should already have from the lesson.\n",
+    "comments: false\n",
     "---"
    ]
   },
@@ -19,8 +22,8 @@
    "source": [
     "<h1>Popcorn Hax</h1>\n",
     "\n",
-    "To acces printed results using console.log, follow this simple set of steps.\n",
-    "1: Acces the \"Help\" button near the top of your screen (next to to \"Terminal\" and \"Window). It looks something like this on macOS:<br>\n",
+    "To access printed results using console.log, follow this simple set of steps.\n",
+    "1: Access the \"Help\" button near the top of your screen (next to to \"Terminal\" and \"Window). It looks something like this on macOS:<br>\n",
     "<img width=\"844\" alt=\"image\" src=\"https://github.com/user-attachments/assets/18465a9b-e7e3-4f9d-8653-3ede47e2dfc6\" />\n",
     "<br>\n",
     "After clicking help, the drop-down menu should have a \"Toggle Developer Tools\" option. Click it, and navigate to the console menu.\n",
@@ -91,7 +94,7 @@
     "//Define variables up here. Make sure they are both number values.\n",
     "let charHealth = 100.0;\n",
     "const damage = 13.5;\n",
-    "//Update charHealth after the player has taken damage. The character should lose health relative to damage taken.\n",
+    "//Update charHealth after the player has taken damage. The character should lose health relative to damage taken. Print your results.\n",
     "charHealth -= damage;\n",
     "console.log(charHealth);"
    ]
@@ -101,7 +104,7 @@
    "metadata": {},
    "source": [
     "<h2>Exercise 3:</h2><br>\n",
-    "Create two parts of a message, and store each part as a seperate variable. Combine these variables into a new one, finalMessage, and print its results."
+    "Create two parts of a message, and store each part as a separate variable. Combine these variables into a new one, finalMessage, and print its results."
    ]
   },
   {
@@ -127,8 +130,11 @@
    "source": [
     "%%js\n",
     "//Define variables and combine them here\n",
-    "\n",
-    "//Print results here.\n"
+    "let messagePart1 = \n",
+    "let messagePart2 = \n",
+    "let finalMessage = \n",
+    "//Print results here.\n",
+    "console.log();"
    ]
   }
  ],
