--- a/_notebooks/variables/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook2.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Learning Habits\n",
-    "description: Establishing pair programming habits in the classroom.  This will extend to other forms of collaboration, such as group work and team projects. \n",
+    "title: Lesson 2\n",
+    "description: Advanced applications of variables and use cases.\n",
     "type: collab\n",
-    "comments: true\n",
+    "comments: false\n",
     "---"
    ]
   },
