changes to lesson 2 and hw

--- a/_notebooks/variables/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook2.ipynb
@@ -11,7 +11,7 @@
     "---\n",
     "layout: post\n",
     "title: Lesson 2\n",
-    "description: Advanced applications of variables and use cases.\n",
+    "description: Now that you know the types of variables, let's see how they can be used in different real-world contexts.\n",
     "type: collab\n",
     "comments: false\n",
     "---"
@@ -29,13 +29,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simple game logic"
+    "<h2>How Can We Use Variables?</h2>\n",
+    "<b1>\n",
+    "Variables are useful in virtually every context. Do you want to store a dynamically changing value, like score or health? Use a variable. Want to contain messages that can contain changing pieces of information? Variables. Want to intentionally have empty values for later use (for whatever reason)? Variables.\n",
+    "</b1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b1>Score is a great example on how to use variables in an actual context. In this example, there is a conditional that needs to be satisfied. When the criteria are met, the Score variable increments by 1.</b1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "//put code here\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "//put code here"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "test2",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
