--- a/_notebooks/variables/2025-01-09-homework.ipynb
+++ b/_notebooks/variables/2025-01-09-homework.ipynb
@@ -11,7 +11,7 @@
     "---\n",
     "layout: post\n",
     "title: Homework\n",
-    "description: Exercises to help you apply your knowledge of variables.\n",
+    "description: Homework exercises to apply your skills.\n",
     "type: collab\n",
     "comments: true\n",
     "---"
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lesson one homework"
+    "## Lesson 1 homework"
    ]
   },
   {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -49,7 +49,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "// Would you use Let or Const\n\nconsole.log(\"test\");\n",
+      "application/javascript": "// Would you use Let or Const\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -60,14 +60,20 @@
    ],
    "source": [
     "%%js\n",
-    "// Would you use Let or Const"
+    "// Would you use Let or Const?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a variable playerLimit that cannot be re-assigned and give it a value of 4."
+    "<html>\n",
+    "<style>\n",
+    "u {\n",
+    "    text-decoration: underline;\n",
+    "}\n",
+    "</style>\n",
+    "Define a variable \"playerLimit\" that <u>cannot be re-assigned</u> and give it a value of 4."
    ]
   },
   {
