--- a/_notebooks/variables/2025-01-09-homework.ipynb
+++ b/_notebooks/variables/2025-01-09-homework.ipynb
@@ -14,6 +14,7 @@
     "description: Homework exercises to apply your skills.\n",
     "type: collab\n",
     "comments: true\n",
+    "permalink: /variables/homework\n",
     "---"
    ]
   },
