--- a/_notebooks/variables/2025-01-09-lessonBook1.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook1.ipynb
@@ -25,7 +25,8 @@
     "title: Lesson 1\n",
     "description: What are variables? What types of variables are there? what do they do? This lesson will help you find out.\n",
     "type: collab\n",
-    "comments: true\n",
+    "comments: false\n",
+    "permalink: /variables/lessonBook1\n",
     "---"
    ]
   },
