--- a/_notebooks/variables/2025-01-09-popcornHax completed.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax completed.ipynb
@@ -14,6 +14,7 @@
     "description: Examples of correct answers for the Popcorn Hax Page.\n",
     "type: collab\n",
     "comments: true\n",
+    "permalink: /variables/popcornHaxAnswerKey\n",
     "---"
    ]
   },
