--- a/_notebooks/variables/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax.ipynb
@@ -12,7 +12,9 @@
     "layout: post\n",
     "title: Popcorn Hax\n",
     "description: Exercises to do mid-lesson, when instructed. Designed to be fairly easy and help you apply a basic understanding of variables you should already have from the lesson.\n",
+    "type: collab\n",
     "comments: false\n",
+    "permalink: /variables/popcornHax\n",
     "---"
    ]
   },
