--- a/_notebooks/variables/2025-01-09-lessonBook1.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook1.ipynb
@@ -236,26 +236,103 @@
    "metadata": {},
    "source": [
     "<h2>Null</h2>\n",
-    "Null is like undefined's brother. The two are very similar, with the main difference being that null represents variables that do not exist at all while undefined represents the value of variables with no assigned value. Null is rarely used, but can be useful in specific cases.\n",
+    "Null is like undefined's brother. The two are very similar, with the main difference being that null represents variables that do not exist at all while undefined represents the value of variables with no assigned value. Null is rarely used, but can be useful in specific cases. As an example, if you want to test if a variable has been defined earlier in your code, you may want to initially define the variable with a null value. Checking for a value later will allow you to see if it has properly been updated (or, if it stays null, it has not been updated).\n",
     "<br>\n",
     "<h3>Example</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "let password = null;\nconsole.log(password); //Password has not been updated yet\npassword = 12345;\nconsole.log(password); //Prints updated password\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "let password = null;\n",
+    "console.log(password); //Password has not been updated yet\n",
+    "password = 12345;\n",
+    "console.log(password); //Prints updated password"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<h2>BigInt</h2>\n",
+    "<b1>\n",
+    "BigInt is another less commonly used data type. \"BigInt\" is short for (big integer), and they exist to stop the computer from having problems with numbers too big for the system.<br>\n",
+    "Computers can only hold a certain integer as the largest number (Ex. a 32 bit system has a largest Integer, 2,147,483,647. There is also a smallest number, -2,147,483,648). If the system detects a number larger than this, it will roll back to the smallest number and count up fron there. BigInts act as a failsafe for this type of problem. <br><br><strong>BigInts cannot be interacted with math or mized with normal numbers.</strong>\n",
+    "<br><br>\n",
+    "Define a BigInt with either an \"n\" at the end of a number, or a BigInt() function enclosing the number.\n",
+    "</b1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "let integerOverflowLimitSafe = 111111111111111111111n; //The \"n\" at the end of the number marks this as a BigInt instead of a number.\nconsole.log(integerOverflowLimitSafe); //print the BigInt\nconst alsoBigNumber = 9927634512365412342; //Too big to normally store, will result in bigint value showing up.\nconsole.log(alsoBigNumber);\nconst bigNumber = BigInt(234812341258347);\nconsole.log(bigNumber);\nconsole.log(alsoBigNumber);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "let integerOverflowLimitSafe = 111111111111111111111n; //The \"n\" at the end of the number marks this as a BigInt instead of a number.\n",
+    "console.log(integerOverflowLimitSafe); //print the BigInt\n",
+    "//Math functions like +, -, and Math.random cannot be used with BigInts.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Summary</h2>\n",
+    "In this lesson, you have learned about the 7 main types of data that variables can store in JavaScript, while also seeing how a few other things work, like if conditionals, console.log, and Math.random. \n",
+    "<ul>\n",
+    "    <li>Numbers</li>\n",
+    "    <li>Strings</li>\n",
+    "    <li>Symbols</li>\n",
+    "    <li>Booleans</li>\n",
+    "    <li>Null</li>\n",
+    "    <li>Undefined</li>\n",
+    "    <li>BigInt</li>\n",
+    "</ul>\n",
+    "<br>\n",
+    "Now, let's see some applications and advanced uses of these simple concepts!"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "test2",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
