--- a/_notebooks/variables/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook2.ipynb
@@ -14,6 +14,7 @@
     "description: Now that you know the types of variables, let's see how they can be used in different real-world contexts.\n",
     "type: collab\n",
     "comments: false\n",
+    "permalink: /variables/lessonBook2\n",
     "---"
    ]
   },
@@ -39,12 +40,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b1>Score is a great example on how to use variables in an actual context. In this example, there is a conditional that needs to be satisfied. When the criteria are met, the Score variable increments by 1.</b1>"
+    "<b1>Score is a great example on how to use variables in an actual context. In this example, every time the program is run, the Score variable increments by 1.</b1>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -53,7 +54,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "//defining our variables. score is a number, and coinCollected is a boolean.\nlet score = 0;\nlet coinCollected = false\nconsole.log(\"Press W to collect a coin!\")\nwindow.addEventListener(\"keypress\", function(event){\n    if(event.key == \"w\"){\n        coinCollected = true;\n    }else{\n        coinCollected = false;\n    }\n    //Above: Conditional to detect when W key is pressed. \n    //Don't worry about this too much, it just allows us to increment score by 1 every time wis pressed\n    if (coinCollected = true){\n        score += 1;\n    }\n    console.log(`Score: ${score}`);\n})\n",
+      "application/javascript": "// Get the current score from localStorage, or set it to 0 if it doesn't exist\nlet score = parseInt(localStorage.getItem(\"score\")) || 0;\n\n// Increment the score\nscore += 1;\n\n// Save the updated score back to localStorage\nlocalStorage.setItem(\"score\", score);\n\n// Log the current score\nconsole.log(`Your score is now: ${score}`);\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -64,23 +65,17 @@
    ],
    "source": [
     "%%js\n",
-    "//defining our variables. score is a number, and coinCollected is a boolean.\n",
-    "let score = 0;\n",
-    "let coinCollected = false\n",
-    "console.log(\"Press W to collect a coin!\")\n",
-    "window.addEventListener(\"keypress\", function(event){\n",
-    "    if(event.key == \"w\"){\n",
-    "        coinCollected = true;\n",
-    "    }else{\n",
-    "        coinCollected = false;\n",
-    "    }\n",
-    "    //Above: Conditional to detect when W key is pressed. \n",
-    "    //Don't worry about this too much, it just allows us to increment score by 1 every time wis pressed\n",
-    "    if (coinCollected = true){\n",
-    "        score += 1;\n",
-    "    }\n",
-    "    console.log(`Score: ${score}`);\n",
-    "})\n"
+    "// Get the current score from localStorage, or set it to 0 if it doesn't exist\n",
+    "let score = parseInt(localStorage.getItem(\"score\")) || 0;\n",
+    "\n",
+    "// Increment the score\n",
+    "score += 1;\n",
+    "\n",
+    "// Save the updated score back to localStorage\n",
+    "localStorage.setItem(\"score\", score);\n",
+    "\n",
+    "// Log the current score\n",
+    "console.log(`Your score is now: ${score}`);"
    ]
   }
  ],
