--- a/_notebooks/variables/2025-01-09-homework.ipynb
+++ b/_notebooks/variables/2025-01-09-homework.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now do it yourself, future basement dwellers:"
+    "Now, create something that on run, defines a playername, sets a game score, and decreases some amount from it. Make sure to use console.log to print the playername and the variable before and after the operation. Go forth, future basement dwellers."
    ]
   },
   {
