--- a/_notebooks/variables/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook2.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You now know how to define variables and vaguely know how to use them. However you cannot fully usage them to accomplish a goal. Your homework will be used as an example for how to use the varibles after you define them."
+    "You now know how to define variables and vaguely know how to use them. However you cannot fully use them to accomplish a goal. Your homework will be used as an example for how to use the variables after you define them."
    ]
   },
   {
