--- a/_notebooks/variables/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax.ipynb
@@ -22,6 +22,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "h2 {\n",
+    "        text-align: center; \n",
+    "        font-size: 5vw;\n",
+    "        color: rgb(255, 255, 255);\n",
+    "        font-family: \"Oxygen\", Helvetica, sans-serif;\n",
+    "    }\n",
+    "    h1 {\n",
+    "        text-align: left; \n",
+    "        font-size: 24pt; \n",
+    "        color: rgb(170, 220, 246);\n",
+    "        font-size: 3.5vw;\n",
+    "    }\n",
+    "    body {\n",
+    "        text-align: left; \n",
+    "        background-color: rgb(2, 12, 35);\n",
+    "        color: rgb(220, 220, 220);\n",
+    "        font-size: 1.5vw;\n",
+    "    }\n",
+    "</style>\n",
     "<h1>Popcorn Hax</h1>\n",
     "\n",
     "To access printed results using console.log, follow this simple set of steps.\n",
